--- a/Vale/Perro/Huesos/2/index.html
+++ b/Vale/Perro/Huesos/2/index.html
@@ -5,7 +5,6 @@
 <title>Ahorcado – 28 Huesos del Perro</title>
 
 <style>
-/* ===== FONDO EXTERIOR ===== */
 body{
   margin:0;
   font-family:Arial;
@@ -14,7 +13,6 @@ body{
   text-align:center;
 }
 
-/* ===== PANEL PRINCIPAL ===== */
 .panel{
   max-width:1100px;
   margin:30px auto;
@@ -70,7 +68,6 @@ button{
 #errores{color:#ff4444}
 #intentos{font-size:.95rem}
 #msg{font-size:1.2rem;margin-top:8px}
-
 .ok{color:#00cc66}
 .bad{color:#ff4444}
 
@@ -80,27 +77,33 @@ button{
   box-shadow:0 0 15px #000;
 }
 
-/* ===== BARRA ===== */
+/* ===== PROGRESO ABAJO ===== */
+.progreso-box{
+  margin-top:16px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:12px;
+}
+
 .barra{
-  width:100%;
-  height:14px;
+  width:160px;
+  height:12px;
   background:#333;
   border-radius:10px;
   overflow:hidden;
-  margin:10px 0
 }
+
 .barra-inner{
   height:100%;
   width:0%;
   background:linear-gradient(90deg,#00ffcc,#00aaff);
-  transition:width .3s
+  transition:width .3s;
 }
 
-/* ===== TEXTO ABAJO ===== */
 .progreso-texto{
-  font-size:.95rem;
-  margin-top:10px;
-  color:#00ffcc
+  font-size:0.95rem;
+  color:#00ffcc;
 }
 </style>
 </head>
@@ -109,7 +112,7 @@ button{
 
 <div class="panel">
 
-  <!-- ===== JUEGO ===== -->
+  <!-- JUEGO -->
   <div class="game-box">
     <h2>Ahorcado – 28 Huesos del Perro</h2>
 
@@ -117,10 +120,6 @@ button{
       <button onclick="setNivel(0)" id="b0" class="activo">Cabeza</button>
       <button onclick="setNivel(1)" id="b1">Tronco</button>
       <button onclick="setNivel(2)" id="b2">Extremidades</button>
-    </div>
-
-    <div class="barra">
-      <div class="barra-inner" id="barra"></div>
     </div>
 
     <div class="pista" id="pista"></div>
@@ -137,11 +136,16 @@ button{
     <button onclick="siguiente()">Seguir ➜</button>
     <div id="msg"></div>
 
-    <!-- ✅ TEXTO DE PROGRESO ABAJO -->
-    <div class="progreso-texto" id="textoProgreso"></div>
+    <!-- ✅ BARRA + TEXTO JUNTOS ABAJO -->
+    <div class="progreso-box">
+      <div class="barra">
+        <div class="barra-inner" id="barra"></div>
+      </div>
+      <div class="progreso-texto" id="textoProgreso"></div>
+    </div>
   </div>
 
-  <!-- ===== IMAGEN ===== -->
+  <!-- IMAGEN -->
   <div class="img-box">
     <h3 style="color:#00ffff">Imagen numerada</h3>
     <img src="imagen.jpg">
