--- a/Vale/Perro/Huesos/2/index.html
+++ b/Vale/Perro/Huesos/2/index.html
@@ -114,7 +114,7 @@ button{
 
   <!-- JUEGO -->
   <div class="game-box">
-    <h2>Ahorcado – 28 Huesos del Perro</h2>
+    <h2>Ahorcadito </h2>
 
     <div class="niveles">
       <button onclick="setNivel(0)" id="b0" class="activo">Cabeza</button>
